bk_ida/gccida/c0/make_memloc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_memloc/src/reload.c:4993:32: error: use of undeclared identifier 'machine_mode'
tema = adjust_address_1( v2, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ad), 0LL, 0, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_memloc/src/reload.c:4993:47: error: expected expression
tema = adjust_address_1( v2, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ad), 0LL, 0, 1); 
                                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/make_memloc/src/obj/reload.o] Error 1
